--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,14 @@ name: "hikari"
 # Description of your content (will only be used on Google Search)
 description: "Fluid, responsive blog theme for Jekyll"
 
-# Your name. Will show in your footer + sidebar 
+# Your name. Will show in your footer + sidebar
 author: "John Doge"
+lang: ja
 
 url: "http://m3xm.github.io"
 baseurl: "/hikari-for-Jekyll"
 
-# A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words. 
+# A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words.
 author-bio: "I'm a dog. I develop things. This is my blog so why don't you close this damn side panel (cursed by most UX Designers but I don't care, I do whatever I want) and start reading my awesome stuff?"
 
 # Social Accounts (mine, as placeholders)
@@ -19,6 +20,7 @@ twitter: mx3m
 github: m3xm
 dribbble: m3xm
 instagram: m3xm
+googleplus:
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
@@ -27,7 +29,7 @@ ga_tracking_id: UA-47727049-1
 
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
 
-markdown: kramdown
+markdown: redcarpet
 permalink: pretty
 highlighter: pygments
 
@@ -39,3 +41,10 @@ paginate_path: "/page/:num"
 sass:
   sass_dir: _scss
   style: :compressed
+
+# Redcarpet
+redcarpet:
+  extensions: ["strikethrough", "tables", "fenced_code_blocks"]
+
+# AddThis
+# TODO
