--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Title of your blog; shows in the header
-name: "hikari with the material design"
+name: "materi (forked hikari)"
 
 # Description of your content (will only be used on Google Search)
-description: "Fluid, responsive blog theme for Jekyll"
+description: "materi forked the https://github.com/m3xm/hikari-for-Jekyll. Apply theme like a Material Design, responsive blog theme for Jekyll"
 
 # Your name. Will show in your footer + sidebar
 author: "ogaclejapan"
@@ -12,7 +12,7 @@ url: "http://ogaclejapan.github.io"
 baseurl: "/hikari-for-Jekyll"
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words.
-author-bio: "I'm a dog. I develop things. This is my blog so why don't you close this damn side panel (cursed by most UX Designers but I don't care, I do whatever I want) and start reading my awesome stuff?"
+author-bio: "materi forked the 'hikari for Jekyll’. Apply theme like a Material Design and added some features. Thanks for coming :)"
 
 # Social Accounts (mine, as placeholders)
 
