--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Title of your blog; shows in the header
-name: "materi for jekyll"
+name: "Materi for jekyll"
 
 # Description of your content (will only be used on Google Search)
-description: "materi forked the 'hikari for Jekyll'. Apply theme like a Material Design, responsive blog theme for Jekyll"
+description: "Materi forked from 'hikari for Jekyll'. Apply theme like a Material Design, responsive blog theme for Jekyll"
 
 # Your name. Will show in your footer + sidebar
 author: "ogaclejapan"
@@ -12,7 +12,7 @@ url: "http://ogaclejapan.github.io"
 baseurl: "/materi-for-jekyll"
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words.
-author-bio: "materi forked the https://github.com/m3xm/hikari-for-Jekyll. Apply theme like a Material Design and added some features. Thanks for coming :)"
+author-bio: "Materi forked from https://github.com/m3xm/hikari-for-Jekyll. Apply theme like a Material Design and added some features. Thanks for coming :)"
 
 # Social Accounts (mine, as placeholders)
 
@@ -33,7 +33,7 @@ markdown: redcarpet
 permalink: pretty
 highlighter: pygments
 
-paginate: 10
+paginate: 5
 paginate_path: "/page/:num"
 
 # SCSS
