Migrate to Jekyll3.x

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: "Materi forked from 'hikari for Jekyll'. Apply theme like a Materia
 # Your name. Will show in your footer + sidebar
 author: "ogaclejapan"
 lang: ja
+timezone: Asia/Tokyo
 
 url: "http://ogaclejapan.github.io"
 baseurl: "/materi-for-jekyll"
@@ -15,7 +16,6 @@ baseurl: "/materi-for-jekyll"
 author-bio: "Materi forked from https://github.com/m3xm/hikari-for-Jekyll. Apply theme like a Material Design and added some features. Thanks for coming :)"
 
 # Social Accounts (mine, as placeholders)
-
 twitter: ogaclejapan
 github: ogaclejapan
 dribbble:
@@ -23,28 +23,30 @@ instagram:
 googleplus: 115224314007024961072
 
 # Google Analytics (you may want to changes these with yours or even delete :)
-
 ga_domain: ogaclejapan.github.io
 ga_tracking_id: UA-37241684-2
 
-# Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
+# Handling Reading
+exclude: ["README.md", ".gitignore", "Gemfile", "Gemfile.lock", "vendor", "art"]
 
-markdown: redcarpet
+# Plugins
+gems: [jekyll-redirect-from, jekyll-paginate]
+
+# Conversion
+markdown: kramdown
+highlighter: rouge
+
+# Outputting
 permalink: pretty
-highlighter: pygments
-
 paginate: 5
 paginate_path: "/page/:num"
 
-# SCSS
+# Markdown Processors
+kramdown:
+  input: GFM
 
+# SCSS
 sass:
   sass_dir: _scss
   style: :compressed
 
-# Redcarpet
-redcarpet:
-  extensions: ["strikethrough", "tables", "fenced_code_blocks", "autolink"]
-
-# Exclude Files
-exclude: ["README.md", ".gitignore", "Gemfile", "Gemfile.lock", "art"]
